Changing title tag

--- a/localgate.html
+++ b/localgate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" dir="ltr">
   <head>
-    <title>Demo for Video Trigger</title>
+    <title>Demo for Local Gate</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/gate.js"></script>
     <style>
